--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,11 @@ asgiref==3.8.1
 attrs==23.2.0
 autobahn==23.6.2
 Automat==22.10.0
+boto3==1.34.145
+botocore==1.34.145
 cffi==1.16.0
 channels==4.1.0
+channels-redis==4.2.0
 constantly==23.10.4
 cryptography==42.0.8
 daphne==4.1.2
@@ -11,24 +14,32 @@ Django==5.0.7
 django-ckeditor==6.7.1
 django-cors-headers==4.4.0
 django-js-asset==2.2.0
+django-storages==1.14.4
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
 drf-spectacular==0.27.2
+gunicorn==22.0.0
 hyperlink==21.0.0
 idna==3.7
 incremental==22.10.0
 inflection==0.5.1
+jmespath==1.0.1
 jsonschema==4.23.0
 jsonschema-specifications==2023.12.1
+msgpack==1.0.8
+packaging==24.1
 pillow==10.4.0
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
 pycparser==2.22
 PyJWT==2.8.0
 pyOpenSSL==24.1.0
+python-dateutil==2.9.0.post0
 PyYAML==6.0.1
+redis==5.0.7
 referencing==0.35.1
 rpds-py==0.19.0
+s3transfer==0.10.2
 service-identity==24.1.0
 setuptools==71.0.3
 six==1.16.0
@@ -37,5 +48,6 @@ Twisted==24.3.0
 txaio==23.1.1
 typing_extensions==4.12.2
 uritemplate==4.1.1
+urllib3==2.2.2
 whitenoise==6.7.0
 zope.interface==6.4.post2
